--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PerlaDOccidente</title>
+  <title>Perla d'Occidente - Appartamento Vacanza a Marsala</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Splendida casa vacanza a Marsala. Comfort e relax a due passi dal mare. Prenota ora!">
+  <meta name="keywords" content="casa vacanza, appartamento vacanza, affitto, mare, relax, prenotazione">
+  <meta name="author" content="Perla d'Occidente">
 </head>
 <body>
   <app-root></app-root>
