angular material installed

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
   <meta name="description" content="Splendida casa vacanza a Marsala. Comfort e relax a due passi dal mare. Prenota ora!">
   <meta name="keywords" content="casa vacanza, appartamento vacanza, affitto, mare, relax, prenotazione">
   <meta name="author" content="Perla d'Occidente">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
