several changes to set a simple page

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Perla d'Occidente - Appartamento Vacanza a Marsala</title>
+  <title>Perla d'Occidente - Appartamento Vacanze a Marsala</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="description" content="Splendida casa vacanza a Marsala. Comfort e relax a due passi dal mare. Prenota ora!">
-  <meta name="keywords" content="casa vacanza, appartamento vacanza, affitto, mare, relax, prenotazione">
+  <meta name="description" content="Splendida casa vacanze a Marsala. Comfort e relax a due passi dal mare. Prenota ora!">
+  <meta name="keywords" content="casa vacanze, appartamento vacanze, affitto, mare, relax, prenotazione">
   <meta name="author" content="Perla d'Occidente">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
